css/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

h1{
    color:white;
    text-shadow: 2px 2px 4px purple;
}
h2, h3{
    color: #3f51b5;
    text-shadow: 2px 2px 4px purple;
    font-size:30px;
}
a{
    text-decoration: none;
    color:white;
    text-shadow: 2px 2px 4px purple;
}
p{
    font-size:20px;
    color:white;
    text-shadow: 2px 2px 4px black;
}
.container{
    box-sizing:border-box;
    background:#38383d;
    max-width: 100%;
    margin:0 auto;
    padding: 20px 1.25%;
}
.headline{
    background-image: url("/images/header-background.jpg");
    background-color:#cccccc;
    height: 225px;
    background-position:center;
    background-repeat: no-repeat;
    background-size:cover;
    position: relative;
}
.headline-container{
    /*background: #3f51b5;*/
    text-align:center;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: white;
    width:100%;
}
.headline-container h1{
    height:100px;
    font-size:50px;
    padding:20px;
}
.Nav-Links{
    display:flex;
    flex-direction: row;
    justify-content: space-around;
    font-size: 125%;
}
header{
    display:flex;
    flex-direction: column;
    align-items: center;
}
.RA{
    padding:20px 0 0 0;
}
header button{
    background:#3f51b5;
    color:white;
    border-radius: 8px;
    border-color:#303f9f;
    padding: 15px 72px;
    margin:25px;
    text-align: center;
    text-decoration: none;
    font-size: 20px;
}
button:hover{
    background:#303f9f;
    color:white;
    border-color:#828fd4;
}

.Main-Section{
    display:flex;
    flex-direction: column;
    /*width:100%;*/
}
.Main-Section img{
    max-width:90px;
    height:auto;
}
.Convenience-h2{
    display:flex;
    justify-content: flex-end;
    padding:20px;
    max-width:1000px;
    margin:0 auto;
}
.Convenience{
    display:flex;
    flex-direction:row-reverse;
    padding:10px;
    max-width:1000px;
    margin:0 auto;
}
.Convenience p{
    display:flex;
    align-items:center;
    text-align: center;
    margin:10px;
    
}
.Convenience-header-img {
    display:flex;
    flex-wrap:wrap;
    justify-content: space-evenly;
}
.Anonymity-h2{
    display:flex;
    justify-content: flex-start;
    padding:20px;
    max-width:1000px;
    margin:0 auto;
}
.Anonymity{
    display:flex;
    align-items:center;
    padding:0 10px;
    max-width:1000px;
    margin:0 auto;
}
.Anonymity p{
    display:flex;
    align-items:center;
    width:100%;
    text-align: center;
    margin:10px;
}
.Anonymity-header-img{
    display:flex;
    flex-wrap:wrap;
    justify-content: space-evenly;
}
.Secure-h2{
    display:flex;
    justify-content: flex-end;
    padding:20px;
    max-width:1000px;
    margin:0 auto;
}
.Secure{
    display:flex;
    flex-direction:row-reverse;
    align-items:center;
    padding:0 10px;
    max-width:1000px;
    margin:0 auto;
}
.Secure p{
    display:flex;
    align-items:center;
    width:100%;
    text-align: center;
    margin:10px;
}
.Secure-header-img{
    display:flex;
    flex-wrap:wrap;
    justify-content: space-evenly;
}
.Features-h2{
    display:flex;
    justify-content: center;
    padding:20px;
}
.Features{
    display:flex;
    flex-direction:row;
    justify-content: space-between;
    /*max-width:1000px;
    margin:0 auto;*/
}
.Features-email{
    display:flex;
    flex-direction:column;
    align-items:center;
    margin:10px;
}
.Features-automatically{
    display:flex;
    flex-direction:column;
    align-items:center;
    margin:10px;
}
.Features-never{
    display:flex;
    flex-direction:column;
    align-items:center;
    margin:10px;
}
.Features p{
    width:100%;
    text-align: center;
    padding:40px;
}

footer{
    display:flex;
    justify-content: center;
    padding:30px 0 0 0;
}
footer p{
    color:white;
    text-shadow: 2px 2px 4px purple;
    text-align: center;
    font-size: 14px;
}

/*MEDIA QUERIES*/
@media(max-width:500px){
    .container{
        background:#38383d;
    }
    header{
        display:flex;
        flex-direction: column;
        align-items: center;
    }
    header button{
        font-size: 28px;
        width:100%;
    }
    .Main-Section img{
        max-width:15%;
        height:auto;
    }
    .Convenience-h2{
        justify-content: center;
    }
    .Convenience{
        display:flex;
        flex-direction:column-reverse;
        align-items:center;
        padding:10px;
    }
    .Anonymity-h2{
        justify-content: center;
    }
    .Anonymity{
        display:flex;
        flex-direction:column-reverse;
        align-items:center;
        padding:10px;
    }
    .Secure-h2{
        justify-content: center;
    }
    .Secure{
        display:flex;
        flex-direction:column-reverse;
        align-items:center;
        padding:10px;
    }
    .Features{
        display:flex;
        flex-direction:column;
        align-items:center;
        padding:10px;
    }
    .Features-email{
        margin:20px;
    }
    .Features-automatically{
        margin:20px;
    }
    .Features-never{
        margin:20px;
    }
   
    .Features p{
        font-size:16px;
    }
    footer button{
        font-size: 28px;
        width:100%;
    }
    
}

